# wrdata

./: .gitignore  README.md  champions.csv  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  wrdata.py
.github/workflows/: scraper.yml
res/: wrdata.csv  wrdata.xlsx
src/: champion.py  champion_data_collector.py  champions_analyzer.py  chinese_english.py  constants.py  list_item_parser.py  page_parser.py
src/config/: __init__.py  settings.py  webdriver_factory.py
src/parsers/: list_item_parser.py  page_parser.py
src/services/: __init__.py  data_fetcher.py  data_processor.py  output_service.py  webdriver_service.py
src/wrdata/: __init__.py  exceptions.py
src/wrdata/adapters/: __init__.py  service.py
src/wrdata/adapters/readers/: __init__.py  csv_reader.py  excel_reader.py  reader.py  reader_factory.py
src/wrdata/adapters/writers/: champion_serializer.py  csv_writer.py  writer.py  xlsx_writer.py
src/wrdata/cli/: __init__.py  main.py
src/wrdata/config/: __init__.py  settings.py
src/wrdata/core/: __init__.py  orchestrator.py
src/wrdata/data/: __init__.py  data_fetcher.py  webdriver_factory.py
src/wrdata/data/application/: __init__.py
src/wrdata/data/application/handlers/: __init__.py  champion_pipeline_handler.py  entrypoint.py
src/wrdata/data/domain/: __init__.py
src/wrdata/data/domain/models/: __init__.py  champion.py
src/wrdata/data/domain/ports/: __init__.py  fetchers.py  handlers.py  parsers.py  repositories.py
src/wrdata/data/infrastructure/: __init__.py
src/wrdata/data/infrastructure/fetchers/: __init__.py  data_fetcher.py  selenium_fetcher.py  webdriver_factory.py
src/wrdata/data/infrastructure/parsers/: __init__.py  html_parser.py  list_item_parser.py  page_parser.py
src/wrdata/data/infrastructure/repositories/: __init__.py  base_repository.py  csv_repository.py  excel_repository.py
src/wrdata/data/infrastructure/repositories/csv_repository/: __init__.py  csv_repository.py
src/wrdata/data/infrastructure/repositories/excel_repository/: __init__.py  excel_repository.py
src/wrdata/data/models/: __init__.py  champion.py  enums.py
src/wrdata/data/parsers/: list_item_parser.py  page_parser.py
src/wrdata/data/services/: __init__.py  data_fetcher.py
src/wrdata/domain/: __init__.py  analyzer.py  data_processor.py
src/wrdata/domain/models/: __init__.py  analyzed_champion.py
src/wrdata/i18n/: __init__.py  translator.py
src/wrdata/i18n/mappings/: __init__.py  champions.py  game_terms.py
src/writers/: csv_writer.py  writer.py  xlsx_writer.py
tests/: conftest.py  test_champion.py  test_champion_data_collector.py  test_champions_analyzer.py  test_e2e.py  test_list_item_parser.py  test_page_parser.py  test_writers.py
tests/e2e/: test_workflow.py
tests/strategies/: __init__.py  champion_strategies.py
tests/unit/: __init__.py
tests/unit/adapters/readers/: test_reader_factory.py
tests/unit/adapters/writers/: test_csv_writer.py  test_writers.py
tests/unit/cli/: test_main.py
tests/unit/config/: test_settings.py
tests/unit/data/: test_data_fetcher.py  test_webdriver_factory.py
tests/unit/data/domain/models/: test_champion.py
tests/unit/data/infrastructure/fetchers/: test_webdriver_factory.py
tests/unit/data/infrastructure/parsers/: test_page_parser.py
tests/unit/data/infrastructure/repositories/: test_csv_repository.py  test_excel_repository.py
tests/unit/data/models/: test_champion.py
tests/unit/data/parsers/: test_page_parser.py
tests/unit/domain/: test_analyzer.py
tests/unit/i18n/: __init__.py
